# vietnamese-summarization-filtering

./: .gitignore  Makefile  README.md  config.yaml  dataset_sample.csv  eval.py  inference.py  main.py  pyproject.toml  requirements.txt  train.py
data/processed/statistics/: stats_20251216_004228.json  stats_20251216_005523.json
data_processing/: __init__.py  approach1_baseline.py  approach2_fused.py  approach3_discourse.py  data_processor.py  data_sample_visualize.py  text_utils.py
output/: evaluation_log_base_test_20251214_023144.txt  evaluation_log_base_test_20251214_030958.txt  evaluation_results_base_test_20251214_023144.json  evaluation_results_base_test_20251214_030958.json
output/logs/: events.out.tfevents.1765647556.anhpd.833786.0
util/: __init__.py  dataset_analysis.py  logger.py  preprocess_test_cleaning.py
