[project]
name = "vietnamese-summarization-filtering"
version = "0.1.0"
description = ""
authors = [
    {name = "phamducanh2712@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "sentencepiece (>=0.2.1,<0.3.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "protobuf (>=6.33.2,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
